--- a/style.css
+++ b/style.css
@@ -1336,6 +1336,176 @@ button:hover {
     right: 10px;
 }
 
+.explore-and-virtual {
+    position: relative;
+    padding-top: 283px;
+    padding-bottom: 142px;
+}
+
+.explore-and-virtual__blur {
+    position: absolute;
+    width: 859.184px;
+    height: 529.738px;
+    transform: rotate(154.449deg);
+    flex-shrink: 0;
+    border-radius: 859.184px;
+    opacity: 0.25;
+    background: var(--2, linear-gradient(90deg, #21FCFF 0%, #FD40FF 100%));
+    filter: blur(218px);
+    left: 90px;
+    top: 347px;
+}
+.explore-and-virtual__content{
+    position: relative;
+    z-index: 5;
+}
+.explore {
+    display: flex;
+    max-height: 803px;
+}
+
+.explore__content,
+.virtual__content {
+    display: flex;
+    position: relative;
+}
+
+.explore__content {
+    max-height: 452px;
+    background-image: url(img/Vector.svg);
+    width: 100%;
+    padding-left: 97px;
+    padding-right: 81px;
+    padding-top: 80px;
+    padding-bottom: 110px;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.explore__content::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 6px;
+    border-radius: 62px;
+    background: #7F5CFF;
+    box-shadow: 0px 4px 13px 0px rgba(191, 58, 255, 0.44);
+    z-index: 5;
+}
+
+.explore__blur {
+    position: absolute;
+    height: 451px;
+    width: 1210px;
+    border-radius: 1px;
+    background: linear-gradient(270deg, rgba(58, 78, 255, 0.00) 0%, rgba(156, 58, 255, 0.14) 100%);
+    backdrop-filter: blur(15px);
+}
+
+.explore__info,
+.virtual__info {
+    font-family: 'Plus Jakarta Display';
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 160%;
+    opacity: 0.9;
+    max-width: 397px;
+    letter-spacing: -0.35px;
+    width: 100%;
+    padding-top: 3px;
+    padding-bottom: 38px;
+}
+
+.explore__title {
+    width: 408px;
+}
+
+.explore__btn {
+    width: 172px;
+}
+
+.explore__img {
+    position: relative;
+    top: -223px;
+}
+
+.virtual__img {
+    position: absolute;
+    left: -138px;
+    bottom: -144px;
+}
+
+.virtual__content {
+    justify-content: space-between;
+    gap: 20px;
+    margin-left: 490px;
+    padding-left: 152px;
+    padding-top: 66px;
+    padding-bottom: 66px;
+    padding-right: 94px;
+    align-items: center;
+    background-image: url(img/Vector-3.svg);
+    background-position: right;
+}
+
+.virtual__content::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100%;
+    width: 6px;
+    border-radius: 62px;
+    background: #7F5CFF;
+    box-shadow: 0px 4px 13px 0px rgba(191, 58, 255, 0.44);
+}
+
+.virtual {
+    position: relative;
+}
+
+.virtual__blur {
+    position: absolute;
+    margin-left: 523px;
+    top: 0;
+    min-height: 361px;
+    height: 100%;
+    max-width: 1110px;
+    width: 100%;
+    border-radius: 1px;
+    background: linear-gradient(90deg, rgba(58, 78, 255, 0.00) 0%, rgba(156, 58, 255, 0.14) 100%);
+    backdrop-filter: blur(15px);
+}
+
+.virtual__title {
+    line-height: 138%;
+}
+
+.virtual__info {
+    max-width: 591px;
+    padding-bottom: 0;
+    padding-top: 0;
+}
+
+.virtual__btn {
+    width: 174px;
+    margin-top: 37px;
+}
+
+.explore__star {
+    position: absolute;
+    left: 432px;
+    bottom: -31px;
+}
+
+.virtual__star {
+    position: absolute;
+    bottom: -33px;
+    right: 433px;
+}
+
 /*АДАПТИВЫ*/
 @media (max-width:1500px) {
     .road-map__point.fourth {
@@ -1974,9 +2144,10 @@ button:hover {
 }
 
 @media (max-width:425px) {
-    .game{
+    .game {
         padding-bottom: 260px;
     }
+
     .game__img_one {
         width: 213px;
         top: 60%;
@@ -1989,7 +2160,7 @@ button:hover {
         bottom: -124px;
     }
 
-    .game__logo{
+    .game__logo {
         right: 0;
         bottom: 45px;
     }
