--- a/style.css
+++ b/style.css
@@ -60,7 +60,6 @@ body {
     background-color: rgba(0, 0, 0, 0.7);
     backdrop-filter: blur(2px);
     box-shadow: 0 5px 25px rgb(0, 0, 0);
-    transition: all 0.5s;
 }
 
 .header__content {
@@ -133,7 +132,7 @@ body {
     width: 50%;
     transform: scale(1);
     background-color: #FFF;
-    transition: all 0.5s;
+    transition: transform 0.5s;
 }
 
 .burger::after,
@@ -337,7 +336,6 @@ button:hover {
 
 .about-us .swiper-pagination-fraction {
     display: flex;
-    justify-content: space-between;
     max-width: 402px;
     color: #FFF;
     font-family: 'HeliosExtC';
@@ -346,6 +344,15 @@ button:hover {
     line-height: 145%;
     text-transform: uppercase;
     margin-top: 2px;
+}
+
+.about-us .swiper-pagination-current{
+    width: 20px;
+    text-align: left;
+}
+
+.about-us .swiper-pagination-total{
+    margin-left: auto;
 }
 
 .about-us__img {
@@ -1184,7 +1191,6 @@ button:hover {
     position: relative;
     left: -20px;
     width: 110%;
-    height: 110px;
     overflow: hidden;
     transform: rotate(-9.094deg);
     font-family: 'HeliosExtC';
@@ -1193,7 +1199,8 @@ button:hover {
     line-height: 140%;
     letter-spacing: 0.72px;
     background: #000;
-    margin-top: 22px;
+    margin-top: 20px;
+    padding: 11px 0;
 }
 
 .tickers__second.last {
@@ -1440,8 +1447,8 @@ button:hover {
 
 .virtual__img {
     position: absolute;
-    left: -138px;
-    bottom: -144px;
+    left: -15px;
+    bottom: -147px;
 }
 
 .virtual__content {
@@ -1769,34 +1776,16 @@ button:hover {
     content: '';
     position: absolute;
     width: 33px;
-    height: 3px;
-    background-color: white;
+    height: 33px;
+    background-image: url(img/accord.svg);
     right: 16px;
     top: 70px;
     border-radius: 50%;
     transition: transform 0.5s ease;
 }
 
-.question p::before {
-    content: '';
-    position: absolute;
-    height: 33px;
-    width: 3px;
-    background-color: white;
-    right: 31px;
-    top: 55px;
-    border-radius: 50%;
-    transition: all 0.5s ease;
-}
-
 .faq__question.active .question p::after {
-    transform: rotate(-45deg) translate(0, -50%);
-}
-
-.faq__question.active .question p::before {
-    right: 20px;
-    top: 65px;
-    transform: rotate(135deg) translate(0, 50%);
+    transform: rotate(45deg);
 }
 
 .answer {
@@ -2139,7 +2128,7 @@ button:hover {
         background-size: cover;
         opacity: 0;
         visibility: hidden;
-        transition: all 0.4s;
+        transition: opacity 0.4s visibility 0.4s;
     }
 
     .header__menu.open {
@@ -2225,14 +2214,12 @@ button:hover {
     }
 
     .tickers__second {
-        height: 25px;
         margin-top: 7px;
         font-size: 18.861px;
         line-height: 140%;
     }
 
     .tickers__second.last {
-        height: 50px;
         font-size: 32px;
     }
 
